--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
+    - name: Install static analyzers
+      if: matrix.os == 'ubuntu'
+      run: sudo apt-get install clang-tidy cppcheck -y -q
+
     - name: Configure
       run: cmake --preset=ci-${{ matrix.os }}
         -D BUILD_SHARED_LIBS=${{ matrix.shared }}
