--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,7 @@ set_target_properties(
 )
 
 target_include_directories(
-    shared_shared
-    ${shared_warning_guard}
+    shared_shared ${shared_warning_guard}
     PUBLIC
     "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
     "$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>"
@@ -71,4 +70,14 @@ endif()
 include(CTest)
 if(BUILD_TESTING)
   add_subdirectory(test)
+endif()
+
+option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" OFF)
+if(BUILD_DOCUMENTATION)
+  include(cmake/docs.cmake)
+endif()
+
+option(ENABLE_COVERAGE "Enable coverage support separate from CTest's" OFF)
+if(ENABLE_COVERAGE)
+  include(cmake/coverage.cmake)
 endif()
