--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 project(sharedTests LANGUAGES CXX)
 
 include(../cmake/project-is-top-level.cmake)
+include(../cmake/folders.cmake)
 include(../cmake/windows-set-path.cmake)
 
 if(PROJECT_IS_TOP_LEVEL)
@@ -16,3 +17,5 @@ target_compile_features(shared_test PRIVATE cxx_std_17)
 
 add_test(NAME shared_test COMMAND shared_test)
 windows_set_path(shared_test shared::shared)
+
+add_folders(Test)
