--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,10 +6,14 @@ include(../cmake/project-is-top-level.cmake)
 include(../cmake/folders.cmake)
 include(../cmake/windows-set-path.cmake)
 
+# ---- Dependencies ----
+
 if(PROJECT_IS_TOP_LEVEL)
   find_package(shared REQUIRED)
   enable_testing()
 endif()
+
+# ---- Tests ----
 
 add_executable(shared_test source/shared_test.cpp)
 target_link_libraries(shared_test PRIVATE shared::shared)
@@ -17,5 +21,7 @@ target_compile_features(shared_test PRIVATE cxx_std_17)
 
 add_test(NAME shared_test COMMAND shared_test)
 windows_set_path(shared_test shared::shared)
+
+# ---- End-of-file commands ----
 
 add_folders(Test)
