--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+**/.DS_Store
 .idea/
 .vs/
 .vscode/
 build/
 cmake-build-*/
 prefix/
-**/.DS_Store
+.clangd
 CMakeLists.txt.user
 CMakeUserPresets.json
+compile_commands.json
+env.bat
+env.ps1
