--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,13 +46,13 @@ set_target_properties(
 target_include_directories(
     shared_shared ${warning_guard}
     PUBLIC
-    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
 )
 
 target_include_directories(
     shared_shared SYSTEM
     PUBLIC
-    "$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/export>"
+    "\$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/export>"
 )
 
 target_compile_features(shared_shared PUBLIC cxx_std_17)
